# PyPlatformGame

./: .coverage  .doit.db.dir  .gitignore  MANIFEST.in  PyPlatformGame.pot  __main__.py  aabb_test.py  app_state.py  audiomanager.py  death_manager.py  dodo.py  gameplay.py  gui.py  main.py  physics_test.py  player.py  pylintrc  pyproject.toml  readme.md  renderer.py  scene.py  setup.cfg  singleton.py  ui_descr.py
PyPlatformGame/: __init__.py  __main__.py  app_state.py  audio_test.py  audiomanager.py  billboard_renderer.py  camera.py  death_manager.py  enemy.py  gameplay.py  gravity_test.py  gui.py  input_data.py  main.py  player.py  renderer.py  scene.py  singleton.py  ui_descr.py  win_manager.py
PyPlatformGame/assets/: level.json  scene.json
PyPlatformGame/physics/: ceiling_bump.py  collision.py  gravity.py  velocity.py
PyPlatformGame/render/: rtargets.py  shaders.py
PyPlatformGame/shaders/: billboard.frag  blur.frag  blur_h.frag  blur_v.frag  button_background.frag  button_background.vert  (+8 more)
assets/: level.json
debug/: renderer.py
docs/: PyPlatformGame.rst  conf.py  index.rst  modules.rst  user_docs.rst
locals/: messages.pot
physics/: aabb.py  collision.py  gravity.py
render/: meshes.py  textures.py
shaders/: blur.frag  blur_h.frag  blur_v.frag  blur_v.vert  button_background.frag  button_background.vert  mesh_render.frag  mesh_render.vert  resolve.frag  shadows.frag  shadows.vert  ssao.frag  tex_rect.frag  tex_rect.vert
tests/: __init__.py  aabb_test.py  audio_test.py  disjointed_hurtbox_test.py  gravity_test.py  rtargets_test.py  shaders_test.py
(+28 files in other folders)
